@@ -202,4 +202,76 @@ merge_put_args(const char *name, PyObject *pyvalue, PyObject *kwargs)
 }
 
 
+/*******************************************************************************
+* DBIter
+*******************************************************************************/
+
+/* DBIter */
+typedef struct {
+    PyObject_HEAD
+    PyObject *db;
+} DBIter;
+
+
+/* DBIter_tp_traverse */
+static int
+DBIter_tp_traverse(DBIter *self, visitproc visit, void *arg)
+{
+    Py_VISIT(self->db);
+    return 0;
+}
+
+
+/* DBIter_tp_clear */
+static int
+DBIter_tp_clear(DBIter *self)
+{
+    Py_CLEAR(self->db);
+    return 0;
+}
+
+
+/* DBIter_tp_dealloc */
+static void
+DBIter_tp_dealloc(DBIter *self)
+{
+    DBIter_tp_clear(self);
+    Py_TYPE(self)->tp_free((PyObject *)self);
+}
+
+
+/* DBIter_tp_new */
+static PyObject *
+DBIter_tp_new(PyTypeObject *type, PyObject *db)
+{
+    DBIter *self = (DBIter *)type->tp_alloc(type, 0);
+    if (!self) {
+        return NULL;
+    }
+    /* self->db */
+    Py_INCREF(db);
+    self->db = db;
+    return (PyObject *)self;
+}
+
+
+/* DBIter.__length_hint__ */
+PyDoc_STRVAR(DBIter_length_hint_doc,
+"Private method returning an estimate of len(list(hdb)).");
+
+static PyObject *
+DBIter_length_hint(DBIter *self)
+{
+    return PyLong_FromSsize_t(PyMapping_Length(self->db));
+}
+
+
+/* DBIter_tp_methods */
+static PyMethodDef DBIter_tp_methods[] = {
+    {"__length_hint__", (PyCFunction)DBIter_length_hint, METH_NOARGS,
+     DBIter_length_hint_doc},
+    {NULL}  /* Sentinel */
+};
+
+
 #endif /* _TOKYO_PYTHON_H */
