@@ -3,20 +3,8 @@ import sys
 import os
 import tempfile
 
-from tokyo.cabinet import (HDBOREADER, HDBOWRITER, HDBOCREAT, HDB as _HDB, Error,
+from tokyo.cabinet import (HDBOREADER, HDBOWRITER, HDBOCREAT, HDB, Error,
                            INT_MAX, INT_MIN)
-
-
-class HDB(_HDB):
-
-    def keys(self):
-        return (key for key in self)
-
-    def values(self):
-        return (self[key] for key in self)
-
-    def items(self):
-        return ((key, self[key]) for key in self)
 
 
 class HDBTest(unittest.TestCase):
@@ -72,15 +60,15 @@ class HDBTestDict(HDBTest):
         self.db[b"a"] = b"1"
         self.db[b"b"] = b"2"
         self.assertEqual(len(self.db), 2)
-        d = dict(self.db.items())
+        d = dict(self.db.iteritems())
         self.assertEqual(d, {b"a": b"1", b"b": b"2"})
         self.db[b"c"] = b"3"
         self.db[b"a"] = b"4"
-        d = dict(self.db.items())
+        d = dict(self.db.iteritems())
         self.assertEqual(d, {b"a": b"4", b"b": b"2", b"c": b"3"})
         del self.db[b"b"]
         self.assertEqual(len(self.db), 2)
-        d = dict(self.db.items())
+        d = dict(self.db.iteritems())
         self.assertEqual(d, {b"a": b"4", b"c": b"3"})
 
     def test_clear(self):
@@ -89,21 +77,19 @@ class HDBTestDict(HDBTest):
         self.assertEqual(len(self.db), 2)
         self.db.clear()
         self.assertEqual(len(self.db), 0)
-        d = dict(self.db.items())
+        d = dict(self.db.iteritems())
         self.assertEqual(d, {})
 
 
 class HDBTestIter(HDBTest):
 
     def test_iter(self):
-        i = iter(self.db)
-        self.assertEqual(len(i), 0)
         self.db[b"a"] = b"1"
         self.db[b"b"] = b"2"
         self.db[b"c"] = b"3"
         i = iter(self.db)
-        self.assertEqual(len(i), len(self.db))
         self.assertTrue(b"a" in i)
+        i = iter(self.db)
         self.assertEqual([b"a", b"b", b"c"], sorted(i))
         i = iter(self.db)
         a = next(i)
@@ -112,12 +98,39 @@ class HDBTestIter(HDBTest):
         self.assertRaises(StopIteration, next, i)
         self.assertEqual([b"a", b"b", b"c"], sorted((a, b, c)))
         i = iter(self.db)
-        self.assertEqual(len(i), 3)
         a = next(i)
         del self.db[b"b"]
-        self.db[b"d"] = b"4"
-        self.assertEqual(len(i), 3)
         self.assertRaises(Error, next, i)
+        i = iter(self.db)
+        a = next(i)
+        self.db[b"d"] = b"4"
+        self.assertRaises(Error, next, i)
+        i = iter(self.db)
+        a = next(i)
+        del self.db[b"d"]
+        self.db[b"d"] = b"5"
+        self.assertRaises(Error, next, i)
+
+    def test_iterkeys(self):
+        self.db[b"a"] = b"1"
+        self.db[b"b"] = b"2"
+        self.db[b"c"] = b"3"
+        self.assertEqual([b"a", b"b", b"c"],
+                         sorted(list(self.db.iterkeys())))
+
+    def test_itervalues(self):
+        self.db[b"a"] = b"1"
+        self.db[b"b"] = b"2"
+        self.db[b"c"] = b"3"
+        self.assertEqual([b"1", b"2", b"3"],
+                         sorted(list(self.db.itervalues())))
+
+    def test_iteritems(self):
+        self.db[b"a"] = b"1"
+        self.db[b"b"] = b"2"
+        self.db[b"c"] = b"3"
+        self.assertEqual({b"a": b"1", b"b": b"2", b"c": b"3"},
+                         dict(self.db.iteritems()))
 
 
 class HDBTestPut(HDBTest):
@@ -228,8 +241,10 @@ class HDBTestMisc(HDBTest):
         self.db[b"key2"] = b"2"
         self.db[b"key3"] = b"3"
         self.db[b"akey"] = b"4"
-        self.assertEqual(self.db.searchkeys(b"k"), frozenset((b"key1", b"key2", b"key3")))
-        self.assertEqual(self.db.searchkeys(b"k", 2), frozenset((b"key1", b"key2")))
+        self.assertEqual(self.db.searchkeys(b"k"),
+                         frozenset((b"key1", b"key2", b"key3")))
+        self.assertEqual(self.db.searchkeys(b"k", 2),
+                         frozenset((b"key1", b"key2")))
         self.assertEqual(self.db.searchkeys(b"z"), frozenset())
         self.assertEqual(self.db.searchkeys(b"a"), frozenset((b"akey",)))
 
